feature extraction added

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a660f920-4dde-43c8-b7ba-517ef76ab722",
    "metadata": {
     "execution": {
@@ -14,7 +14,18 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import torch\n",
     "import torchaudio\n",
@@ -50,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a553996c-2adf-44b8-a894-a1f6a2ceb5a2",
    "metadata": {
     "execution": {
@@ -73,13 +84,13 @@
     "data.text = data.text.apply(lambda x: \"\".join([char for char in x if char.isalpha() or char==' ']).lower())\n",
     "data.duration.max()\n",
     "\n",
-    "train_data = data.iloc[:10000]\n",
+    "train_data = data.iloc[:350]\n",
     "valid_data = data.iloc[70000:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9e324020-a3e7-46b8-9228-7cdf8b766904",
    "metadata": {
     "execution": {
@@ -103,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e8268447-41ef-4582-9100-4e0afb378fb7",
    "metadata": {
     "execution": {
@@ -115,14 +126,25 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "135.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.percentile(data.text.str.len(), 99.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e94db526",
    "metadata": {},
    "outputs": [],
@@ -139,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1f94ee00-973a-4a23-ae2a-a0cef7807450",
    "metadata": {
     "execution": {
@@ -152,7 +174,110 @@
     "scrolled": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "390 320\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Transformer(\n",
+       "  (vgg): Sequential(\n",
+       "    (0): Conv2d(1, 16, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (1): ReLU()\n",
+       "    (2): Conv2d(16, 16, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (3): ReLU()\n",
+       "    (4): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "    (5): Conv2d(16, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (6): ReLU()\n",
+       "    (7): Conv2d(32, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (8): ReLU()\n",
+       "    (9): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  )\n",
+       "  (encoder): Encoder(\n",
+       "    (lin_in): Linear(in_features=320, out_features=320, bias=True)\n",
+       "    (norm_in): LayerNorm((320,), eps=1e-05, elementwise_affine=True)\n",
+       "    (pe): TrainablePositionalEncoding()\n",
+       "    (layers): ModuleList(\n",
+       "      (0-1): 2 x EncoderLayer(\n",
+       "        (attention): MHA(\n",
+       "          (dropout): Dropout(p=0.0, inplace=False)\n",
+       "          (heads): ModuleList(\n",
+       "            (0-2): 3 x MHAHead(\n",
+       "              (v): Linear(in_features=320, out_features=320, bias=True)\n",
+       "              (q): Linear(in_features=320, out_features=320, bias=True)\n",
+       "              (k): Linear(in_features=320, out_features=320, bias=True)\n",
+       "              (dropout): Dropout(p=0.0, inplace=False)\n",
+       "            )\n",
+       "          )\n",
+       "          (out): Linear(in_features=960, out_features=320, bias=True)\n",
+       "        )\n",
+       "        (norm1): LayerNorm((320,), eps=1e-05, elementwise_affine=True)\n",
+       "        (ff): FeedForward(\n",
+       "          (squeeze): Linear(in_features=320, out_features=128, bias=True)\n",
+       "          (ReLU): ReLU()\n",
+       "          (dropout): Dropout(p=0.0, inplace=False)\n",
+       "          (unsqueeze): Linear(in_features=128, out_features=320, bias=True)\n",
+       "        )\n",
+       "        (norm2): LayerNorm((320,), eps=1e-05, elementwise_affine=True)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (decoder): Decoder(\n",
+       "    (emb): Embedding(250, 320, padding_idx=4)\n",
+       "    (pe): TrainablePositionalEncoding()\n",
+       "    (dropout): Dropout(p=0.0, inplace=False)\n",
+       "    (layers): ModuleList(\n",
+       "      (0-1): 2 x DecoderLayer(\n",
+       "        (mask_attention): MHA(\n",
+       "          (dropout): Dropout(p=0.0, inplace=False)\n",
+       "          (heads): ModuleList(\n",
+       "            (0-2): 3 x MHAHead(\n",
+       "              (v): Linear(in_features=320, out_features=320, bias=True)\n",
+       "              (q): Linear(in_features=320, out_features=320, bias=True)\n",
+       "              (k): Linear(in_features=320, out_features=320, bias=True)\n",
+       "              (dropout): Dropout(p=0.0, inplace=False)\n",
+       "            )\n",
+       "          )\n",
+       "          (out): Linear(in_features=960, out_features=320, bias=True)\n",
+       "        )\n",
+       "        (norm1): LayerNorm((320,), eps=1e-05, elementwise_affine=True)\n",
+       "        (attention): MHA(\n",
+       "          (dropout): Dropout(p=0.0, inplace=False)\n",
+       "          (heads): ModuleList(\n",
+       "            (0-2): 3 x MHAHead(\n",
+       "              (v): Linear(in_features=320, out_features=320, bias=True)\n",
+       "              (q): Linear(in_features=320, out_features=320, bias=True)\n",
+       "              (k): Linear(in_features=320, out_features=320, bias=True)\n",
+       "              (dropout): Dropout(p=0.0, inplace=False)\n",
+       "            )\n",
+       "          )\n",
+       "          (out): Linear(in_features=960, out_features=320, bias=True)\n",
+       "        )\n",
+       "        (norm2): LayerNorm((320,), eps=1e-05, elementwise_affine=True)\n",
+       "        (ff): FeedForward(\n",
+       "          (squeeze): Linear(in_features=320, out_features=128, bias=True)\n",
+       "          (ReLU): ReLU()\n",
+       "          (dropout): Dropout(p=0.0, inplace=False)\n",
+       "          (unsqueeze): Linear(in_features=128, out_features=320, bias=True)\n",
+       "        )\n",
+       "        (norm3): LayerNorm((320,), eps=1e-05, elementwise_affine=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (classifier): Linear(in_features=320, out_features=250, bias=False)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "\n",
@@ -167,7 +292,7 @@
     "\n",
     "train_dataset = AudioDataset(train_data, path_to_data, tokenizer, \n",
     "                             n_fft=512,\n",
-    "                             n_mels=128, \n",
+    "                             n_mels=40, \n",
     "                             center=True, \n",
     "                             max_tokenized_length=100, \n",
     "                             max_audio_len=25, \n",
@@ -180,7 +305,7 @@
     "                             max_audio_len=25, \n",
     "                             sr=16000)\n",
     "model = Transformer(vocab_size=len(tokenizer),\n",
-    "                    n_mels=128,\n",
+    "                    n_mels=40,\n",
     "                    enc_seq_len=25, \n",
     "                    dec_seq_len=100,\n",
     "                    hidden_dim=16, \n",
@@ -209,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "59d6466c",
    "metadata": {},
    "outputs": [],
@@ -219,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "94544c7b",
    "metadata": {},
    "outputs": [],
@@ -230,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d2bab8a7",
    "metadata": {},
    "outputs": [],
@@ -319,10 +444,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "04d83303",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'я люблю дашу'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "string = tokenizer.encode(\"я люблю дашу\")\n",
     "tokenizer.decode(string, skip_special_tokens=True)"
@@ -330,32 +466,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "92943ea2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'l'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tokenizer.decode(16)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "e67efaf2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 40, 1563])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "train_dataset[0]['encoded_text']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3bfb3b96",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_dataset[0]['true_text']"
+    "train_dataset[1]['spectre'].shape"
    ]
   },
   {
@@ -365,7 +513,136 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FOLD 0\n",
+      "--------------------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mshockless\u001b[0m (\u001b[33mfedor-avilov\u001b[0m). Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.15.3"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>C:\\Users\\fedor\\PycharmProjects\\asr-transformer\\wandb\\run-20230602_152527-ty6uqp33</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/fedor-avilov/asr_fold_0/runs/ty6uqp33' target=\"_blank\">fold_0</a></strong> to <a href='https://wandb.ai/fedor-avilov/asr_fold_0' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/fedor-avilov/asr_fold_0' target=\"_blank\">https://wandb.ai/fedor-avilov/asr_fold_0</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/fedor-avilov/asr_fold_0/runs/ty6uqp33' target=\"_blank\">https://wandb.ai/fedor-avilov/asr_fold_0/runs/ty6uqp33</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c0939f3b7a674a5dab042dfb36dab530",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/19 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9983b3b33f574d77880ede1166ef8976",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EPOCH: 0\n",
+      "{'Train Loss': 4.937832179822419, 'Train Word Accuracy': -0.3547598123550415, 'Train Accuracy': 0.0}\n",
+      "{'Val Loss': 4.7406110763549805, 'Val Word Accuracy': 0.0, 'Val Accuracy': 0.0}\n",
+      "ссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссс\n",
+      "ииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииии\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dd10125a37ca4abda03ac6e27d7f1a5e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/19 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "cross_validation(model = model,\n",
     "                 dataset=train_dataset, \n",
@@ -373,7 +650,8 @@
     "                 device=torch.device(\"cuda\"),\n",
     "                 random_state=69,\n",
     "                 shuffle=True,\n",
-    "                 batch_size=16)"
+    "                 batch_size=16,\n",
+    "                 lr=1e-3)"
    ]
   }
  ],
