--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -84,7 +84,7 @@
     "data.text = data.text.apply(lambda x: \"\".join([char for char in x if char.isalpha() or char==' ']).lower())\n",
     "data.duration.max()\n",
     "\n",
-    "train_data = data.iloc[:350]\n",
+    "train_data = data.iloc[:1000]\n",
     "valid_data = data.iloc[70000:]"
    ]
   },
@@ -179,7 +179,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "390 320\n"
+      "1563 40\n"
      ]
     },
     {
@@ -199,8 +199,8 @@
        "    (9): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
        "  )\n",
        "  (encoder): Encoder(\n",
-       "    (lin_in): Linear(in_features=320, out_features=320, bias=True)\n",
-       "    (norm_in): LayerNorm((320,), eps=1e-05, elementwise_affine=True)\n",
+       "    (lin_in): Linear(in_features=40, out_features=40, bias=True)\n",
+       "    (norm_in): LayerNorm((40,), eps=1e-05, elementwise_affine=True)\n",
        "    (pe): TrainablePositionalEncoding()\n",
        "    (layers): ModuleList(\n",
        "      (0-1): 2 x EncoderLayer(\n",
@@ -208,27 +208,27 @@
        "          (dropout): Dropout(p=0.0, inplace=False)\n",
        "          (heads): ModuleList(\n",
        "            (0-2): 3 x MHAHead(\n",
-       "              (v): Linear(in_features=320, out_features=320, bias=True)\n",
-       "              (q): Linear(in_features=320, out_features=320, bias=True)\n",
-       "              (k): Linear(in_features=320, out_features=320, bias=True)\n",
+       "              (v): Linear(in_features=40, out_features=40, bias=True)\n",
+       "              (q): Linear(in_features=40, out_features=40, bias=True)\n",
+       "              (k): Linear(in_features=40, out_features=40, bias=True)\n",
        "              (dropout): Dropout(p=0.0, inplace=False)\n",
        "            )\n",
        "          )\n",
-       "          (out): Linear(in_features=960, out_features=320, bias=True)\n",
+       "          (out): Linear(in_features=120, out_features=40, bias=True)\n",
        "        )\n",
-       "        (norm1): LayerNorm((320,), eps=1e-05, elementwise_affine=True)\n",
+       "        (norm1): LayerNorm((40,), eps=1e-05, elementwise_affine=True)\n",
        "        (ff): FeedForward(\n",
-       "          (squeeze): Linear(in_features=320, out_features=128, bias=True)\n",
+       "          (squeeze): Linear(in_features=40, out_features=128, bias=True)\n",
        "          (ReLU): ReLU()\n",
        "          (dropout): Dropout(p=0.0, inplace=False)\n",
-       "          (unsqueeze): Linear(in_features=128, out_features=320, bias=True)\n",
+       "          (unsqueeze): Linear(in_features=128, out_features=40, bias=True)\n",
        "        )\n",
-       "        (norm2): LayerNorm((320,), eps=1e-05, elementwise_affine=True)\n",
+       "        (norm2): LayerNorm((40,), eps=1e-05, elementwise_affine=True)\n",
        "      )\n",
        "    )\n",
        "  )\n",
        "  (decoder): Decoder(\n",
-       "    (emb): Embedding(250, 320, padding_idx=4)\n",
+       "    (emb): Embedding(250, 40, padding_idx=4)\n",
        "    (pe): TrainablePositionalEncoding()\n",
        "    (dropout): Dropout(p=0.0, inplace=False)\n",
        "    (layers): ModuleList(\n",
@@ -237,38 +237,38 @@
        "          (dropout): Dropout(p=0.0, inplace=False)\n",
        "          (heads): ModuleList(\n",
        "            (0-2): 3 x MHAHead(\n",
-       "              (v): Linear(in_features=320, out_features=320, bias=True)\n",
-       "              (q): Linear(in_features=320, out_features=320, bias=True)\n",
-       "              (k): Linear(in_features=320, out_features=320, bias=True)\n",
+       "              (v): Linear(in_features=40, out_features=40, bias=True)\n",
+       "              (q): Linear(in_features=40, out_features=40, bias=True)\n",
+       "              (k): Linear(in_features=40, out_features=40, bias=True)\n",
        "              (dropout): Dropout(p=0.0, inplace=False)\n",
        "            )\n",
        "          )\n",
-       "          (out): Linear(in_features=960, out_features=320, bias=True)\n",
+       "          (out): Linear(in_features=120, out_features=40, bias=True)\n",
        "        )\n",
-       "        (norm1): LayerNorm((320,), eps=1e-05, elementwise_affine=True)\n",
+       "        (norm1): LayerNorm((40,), eps=1e-05, elementwise_affine=True)\n",
        "        (attention): MHA(\n",
        "          (dropout): Dropout(p=0.0, inplace=False)\n",
        "          (heads): ModuleList(\n",
        "            (0-2): 3 x MHAHead(\n",
-       "              (v): Linear(in_features=320, out_features=320, bias=True)\n",
-       "              (q): Linear(in_features=320, out_features=320, bias=True)\n",
-       "              (k): Linear(in_features=320, out_features=320, bias=True)\n",
+       "              (v): Linear(in_features=40, out_features=40, bias=True)\n",
+       "              (q): Linear(in_features=40, out_features=40, bias=True)\n",
+       "              (k): Linear(in_features=40, out_features=40, bias=True)\n",
        "              (dropout): Dropout(p=0.0, inplace=False)\n",
        "            )\n",
        "          )\n",
-       "          (out): Linear(in_features=960, out_features=320, bias=True)\n",
+       "          (out): Linear(in_features=120, out_features=40, bias=True)\n",
        "        )\n",
-       "        (norm2): LayerNorm((320,), eps=1e-05, elementwise_affine=True)\n",
+       "        (norm2): LayerNorm((40,), eps=1e-05, elementwise_affine=True)\n",
        "        (ff): FeedForward(\n",
-       "          (squeeze): Linear(in_features=320, out_features=128, bias=True)\n",
+       "          (squeeze): Linear(in_features=40, out_features=128, bias=True)\n",
        "          (ReLU): ReLU()\n",
        "          (dropout): Dropout(p=0.0, inplace=False)\n",
-       "          (unsqueeze): Linear(in_features=128, out_features=320, bias=True)\n",
+       "          (unsqueeze): Linear(in_features=128, out_features=40, bias=True)\n",
        "        )\n",
-       "        (norm3): LayerNorm((320,), eps=1e-05, elementwise_affine=True)\n",
+       "        (norm3): LayerNorm((40,), eps=1e-05, elementwise_affine=True)\n",
        "      )\n",
        "    )\n",
-       "    (classifier): Linear(in_features=320, out_features=250, bias=False)\n",
+       "    (classifier): Linear(in_features=40, out_features=250, bias=False)\n",
        "  )\n",
        ")"
       ]
@@ -423,10 +423,10 @@
     "            total_steps = len(train_loader) * epochs \n",
     "\n",
     "            scheduler = get_cosine_schedule_with_warmup(optimizer, \n",
-    "                                                    num_warmup_steps = 0, # Default value in run_glue.py\n",
+    "                                                    num_warmup_steps = len(train_loader)*2, # Default value in run_glue.py\n",
     "                                                    num_training_steps = total_steps)\n",
     "\n",
-    "\n",
+    "            #scheduler = torch.optim.lr_scheduler.ConstantLR(optimizer, total_iters=0)\n",
     "            for epoch_i in range(epochs):\n",
     "                train_metrics, t_preds = train_epoch(model, train_loader, dataset.tokenizer, loss_function, optimizer, scheduler, device)\n",
     "                eval_metrics, preds = eval_epoch(model, eval_loader, dataset.tokenizer, loss_function, device)\n",
@@ -494,7 +494,40 @@
     {
      "data": {
       "text/plain": [
-       "torch.Size([1, 40, 1563])"
+       "{'text': 'этот процесс так захватывает человека что он отвлекается от переживаний переключаясь на чтото иное',\n",
+       " 'encoded_text': tensor([  1,  93, 184, 103, 209,  86,  69,  81, 104, 204, 107, 196,  85, 188,\n",
+       "          82,  91, 188, 234, 220, 208, 205,  74, 101, 244,  78, 121, 245,  66,\n",
+       "         207, 190,  69, 237,  78, 103, 227, 182,  70,  72, 188, 186, 102, 227,\n",
+       "         182,  74,  75,  94, 238,  95,  81, 106, 202,  87, 184, 195,  72, 183,\n",
+       "         112,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+       "           2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+       "           2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+       "           2,   2]),\n",
+       " 'spectre': tensor([[[0.0000e+00, 2.6849e-03, 6.1225e-02,  ..., 0.0000e+00,\n",
+       "           0.0000e+00, 0.0000e+00],\n",
+       "          [0.0000e+00, 2.8886e-03, 2.6989e-01,  ..., 0.0000e+00,\n",
+       "           0.0000e+00, 0.0000e+00],\n",
+       "          [0.0000e+00, 1.9776e-03, 2.2738e-01,  ..., 0.0000e+00,\n",
+       "           0.0000e+00, 0.0000e+00],\n",
+       "          ...,\n",
+       "          [0.0000e+00, 8.8953e-05, 3.7881e-03,  ..., 0.0000e+00,\n",
+       "           0.0000e+00, 0.0000e+00],\n",
+       "          [0.0000e+00, 8.6801e-05, 3.0835e-03,  ..., 0.0000e+00,\n",
+       "           0.0000e+00, 0.0000e+00],\n",
+       "          [0.0000e+00, 5.8335e-05, 1.7517e-03,  ..., 0.0000e+00,\n",
+       "           0.0000e+00, 0.0000e+00]]]),\n",
+       " 'audio': tensor([[0., 0., 0.,  ..., 0., 0., 0.]]),\n",
+       " 'sr': 16000,\n",
+       " 'spectrogram_len': 940,\n",
+       " 'text_len': 58,\n",
+       " 'true_text': tensor([ 93, 184, 103, 209,  86,  69,  81, 104, 204, 107, 196,  85, 188,  82,\n",
+       "          91, 188, 234, 220, 208, 205,  74, 101, 244,  78, 121, 245,  66, 207,\n",
+       "         190,  69, 237,  78, 103, 227, 182,  70,  72, 188, 186, 102, 227, 182,\n",
+       "          74,  75,  94, 238,  95,  81, 106, 202,  87, 184, 195,  72, 183, 112,\n",
+       "           2,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,\n",
+       "           4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,\n",
+       "           4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,\n",
+       "           4,   4])}"
       ]
      },
      "execution_count": 12,
@@ -503,16 +536,14 @@
     }
    ],
    "source": [
-    "train_dataset[1]['spectre'].shape"
+    "train_dataset[1]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "06e7e833",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -544,7 +575,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>C:\\Users\\fedor\\PycharmProjects\\asr-transformer\\wandb\\run-20230602_152527-ty6uqp33</code>"
+       "Run data is saved locally in <code>C:\\Users\\fedor\\PycharmProjects\\asr-transformer\\wandb\\run-20230606_010342-8mh5k2sz</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -556,7 +587,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/fedor-avilov/asr_fold_0/runs/ty6uqp33' target=\"_blank\">fold_0</a></strong> to <a href='https://wandb.ai/fedor-avilov/asr_fold_0' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+       "Syncing run <strong><a href='https://wandb.ai/fedor-avilov/asr_fold_0/runs/8mh5k2sz' target=\"_blank\">fold_0</a></strong> to <a href='https://wandb.ai/fedor-avilov/asr_fold_0' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -580,7 +611,7 @@
     {
      "data": {
       "text/html": [
-       " View run at <a href='https://wandb.ai/fedor-avilov/asr_fold_0/runs/ty6uqp33' target=\"_blank\">https://wandb.ai/fedor-avilov/asr_fold_0/runs/ty6uqp33</a>"
+       " View run at <a href='https://wandb.ai/fedor-avilov/asr_fold_0/runs/8mh5k2sz' target=\"_blank\">https://wandb.ai/fedor-avilov/asr_fold_0/runs/8mh5k2sz</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -592,12 +623,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c0939f3b7a674a5dab042dfb36dab530",
+       "model_id": "82ecc7752367499ba2f5201545e98dbc",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/19 [00:00<?, ?it/s]"
+       "  0%|          | 0/56 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -606,12 +637,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9983b3b33f574d77880ede1166ef8976",
+       "model_id": "40618851b3c94d35b01256c280aea9b4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/2 [00:00<?, ?it/s]"
+       "  0%|          | 0/6 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -622,21 +653,99 @@
      "output_type": "stream",
      "text": [
       "EPOCH: 0\n",
-      "{'Train Loss': 4.937832179822419, 'Train Word Accuracy': -0.3547598123550415, 'Train Accuracy': 0.0}\n",
-      "{'Val Loss': 4.7406110763549805, 'Val Word Accuracy': 0.0, 'Val Accuracy': 0.0}\n",
-      "ссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссс\n",
-      "ииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииииии\n"
+      "{'Train Loss': 5.189449599811009, 'Train Word Accuracy': -0.41356360912323, 'Train Accuracy': 0.0}\n",
+      "{'Val Loss': 4.783752838770549, 'Val Word Accuracy': 0.0, 'Val Accuracy': 0.0}\n",
+      "сссссссссссссссссссссссссссссссссссссссссссссс\n",
+      "сссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссссс\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd10125a37ca4abda03ac6e27d7f1a5e",
+       "model_id": "eed58f5774d749c68fc9fe6ddef16cf6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/19 [00:00<?, ?it/s]"
+       "  0%|          | 0/56 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "eefdc03e1ff4431d8d188905b8543d28",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/6 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EPOCH: 1\n",
+      "{'Train Loss': 4.712824259485517, 'Train Word Accuracy': 0.0, 'Train Accuracy': 0.0}\n",
+      "{'Val Loss': 4.741640329360962, 'Val Word Accuracy': -0.009872078895568848, 'Val Accuracy': 0.0}\n",
+      "сссссссссссссссссссссссссссссссссссссссссссссссисссссс\n",
+      "мсисссисисссисисисисисе се се се свса а са\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8bc5f85323a24e1eaa98b7fc09f891ee",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/56 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bd5eb77effc2437797a214d5ae8add66",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/6 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EPOCH: 2\n",
+      "{'Train Loss': 4.465691404683249, 'Train Word Accuracy': -0.03625190258026123, 'Train Accuracy': 0.0}\n",
+      "{'Val Loss': 5.129363854726155, 'Val Word Accuracy': -2.0308568477630615, 'Val Accuracy': 0.0}\n",
+      "в тотоадкисссасущнщсиасусений суассенй яссдужинесснсии сенв ть й сиздсеза ежа жасенй й и\n",
+      "в ский сь сущизизизим в саням в санях в сал и посанях санях ский саны й санях й й ский ский санях й й й й й й й саны ы ы\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "888dd98460d34eefb9c37c6b28af9743",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/56 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -646,13 +755,29 @@
    "source": [
     "cross_validation(model = model,\n",
     "                 dataset=train_dataset, \n",
-    "                 loss_function=nn.CrossEntropyLoss(ignore_index=tokenizer.pad_token_id, reduction=\"mean\"), \n",
+    "                 loss_function=nn.CrossEntropyLoss(ignore_index=tokenizer.pad_token_id), \n",
     "                 device=torch.device(\"cuda\"),\n",
     "                 random_state=69,\n",
     "                 shuffle=True,\n",
     "                 batch_size=16,\n",
-    "                 lr=1e-3)"
+    "                 lr=3e-3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8a33e81",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0de6ad75",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
